# mcp-browser-use-server

./: .bandit  .cspell.json  .dockerignore  .env.example  .gitignore  .jscpd.json  .kics.config  .mega-linter.yml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  bandit.yaml  docker-compose.yaml  docker-entrypoint.sh  lychee.toml  makefile  pyproject.toml  pyrightconfig.json  pytest.ini  run_tests.sh  uvx
.cursor/: mcp.json
.githooks/: pre-commit
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/prompts/: README.md  speckit.implement.prompt.md
.github/workflows/: ci-lint-test.yml  ci.yml  image-smoke-test.yml  kics-security-scan.yml  mega-linter.yaml  python-publish.yml  release.yaml  ruff.yml
.magg/: config.json
.specify/: TDD-GUIDE.md  constitution.md
client/: mcp_docker_summary_client.py  mcp_summary_client.py
scripts/: install-git-hooks.sh
server/: server.py  session.py
src/mcp_browser_use_server/: __init__.py  cli.py
tests/: __init__.py  _helpers.py  conftest.py  run_mcptools_test.sh  test_browser_tasks.py  test_browser_tools.py  test_cli.py  test_e2e.py  test_integration.py  test_magg_integration.sh  test_main.py  test_mcp_tools.sh  test_server.py  test_session.py  test_unit.py  test_validation_errors.py
